--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
    
           <form action="">
-            <input type="email" class="email-1" placeholder="Enter your email..." required/>
+            <input type="email" class="email-1" placeholder="Enter your email..." required>
             <input type="submit" value="Get Started" class="btn first-submit-button">
           </form>  
       </div>
